syntax = "proto3";

package admin_service;

option go_package = "admin_service;proto";

message BrokerRequest {
    string action = 1;
}

message BrokerResponse {
    string ip = 1;
    repeated int64 clock = 2;
}

message DnsCommandRequest {
    repeated int64 command = 2;
}

message DnsCommandResponse {
    string ip = 1;
    repeated int64 clock = 2;
}


service AdminService {
    rpc Broker (BrokerRequest) returns (BrokerResponse) {}
    rpc DnsCommand(DnsCommandRequest) returns (DnsCommandResponse) {}
}