syntax = "proto3";

package dns_service;

option go_package = "dns_service;proto";

message GetClockRequest {
    string soli = 1;
}

message GetClockResponse {
    repeated int64 clock = 1;
}

message SendChangesRequest {
    string soli = 1;
}

message SendChangesResponse {
    repeated string dominios = 1;
}

message ReceiveChangesRequest {
    repeated string operations = 1;
    int64 type = 2; //0: borrado inicial (mandado con la primera direccion) 1: recepci√≥n de sitios 2: recepcion ultimo sitio (borrado final) 3: recepcion de dominios
}

message ReceiveChangesResponse {
    string status = 1;
}


service DNSService {
    rpc GetClock (GetClockRequest) returns (GetClockResponse) {}
    rpc SendChanges (SendChangesRequest)  returns (SendChangesResponse) {}
    rpc ReceiveChanges(ReceiveChangesRequest) returns (ReceiveChangesResponse) {}
}